--- a/views/participant_view.xml
+++ b/views/participant_view.xml
@@ -20,6 +20,7 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="participant_id"/>
                         </group>
                         <group>
                         </group>
