--- a/views/configuration_view.xml
+++ b/views/configuration_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 
-    <record id="view_participant_tree" model="ir.ui.view">
-        <field name="name">olclass.participant.tree</field>
-        <field name="model">olclass.participant</field>
+    <record id="view_configuration_tree" model="ir.ui.view">
+        <field name="name">olclass.configuration.tree</field>
+        <field name="model">olclass.configuration</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
@@ -11,16 +11,15 @@
         </field>
     </record>
 
-    <record id="view_participant_form" model="ir.ui.view">
-        <field name="name">olclass.participant.form</field>
-        <field name="model">olclass.participant</field>
+    <record id="view_configuration_form" model="ir.ui.view">
+        <field name="name">olclass.configuration.form</field>
+        <field name="model">olclass.configuration</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="participant_id"/>
                         </group>
                         <group>
                         </group>
@@ -30,23 +29,23 @@
         </field>
     </record>
 
-    <record id="action_participant" model="ir.actions.act_window">
-        <field name="name">Participant</field>
+    <record id="action_configuration" model="ir.actions.act_window">
+        <field name="name">Configuration</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">olclass.participant</field>
+        <field name="res_model">olclass.configuration</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
-                Create your first participant !
+                Create your first configuration !
             </p>
         </field>
     </record>
 
-    <menuitem id="menu_olclass_participant"
-              name="Participant Details"
-              parent="menu_participant_master"
-              action="action_participant"
+    <menuitem id="menu_olclass_configuration"
+              name="Settings"
+              parent="menu_configuration_master"
+              action="action_configuration"
               groups=""
               sequence="10"/>
 </odoo>
